@@ -1,3 +1,8 @@
+2018-01-04  Carl Hetherington  <cth@carlh.net>
+
+	* Set up a default KDM write mode and preselect the last used
+	one when re-opening the KDM window (#1137).
+
 2018-01-03  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.11.35 released.
